--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 .carousel-item {
-    height: 2000px;
+    height: 10000px;
+}
+h1 {
+    font-family: "Montserrat-Black";
+    font-size: 3.5rem;
+    line-height: 1.5;
+    font-weight: 900;
 }
