--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
 .carousel-item {
-    height: 1000px;
+    height: 500px;
 }
 h1 {
     font-family: "Montserrat-Black";
-    font-size: 3.5rem;
+    font-size: 5rem;
     line-height: 1.5;
     font-weight: 900;
 }
 div {
   width: 1500px;
-  margin-bottom: 5px;
+  margin-top: 5px;
 }
 .carousel-item active {
 height: 250px;
