--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,15 @@
-.carousel-item {
-    height: 80%;
-}
 h1 {
     font-family: "Montserrat-Black";
-    font-size: 5rem;
+    font-size: 3rem;
     line-height: 1.5;
     font-weight: 900;
+    text-align: center;
 }
 div {
-  width: 100%;
-  margin-top: 5px;
-}
-.carousel-item active {
-height: 250px;
-}
-.carousel-item {
-height: 250px;
+  width: 90rem;
+  padding: 5% 3%;
 }
 
+.carousel-item {
+height: 350px;
+}
