--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,18 @@
-h1 {
-    font-family: "Montserrat-Black";
-    font-size: 3rem;
-    line-height: 1.5;
-    font-weight: 900;
-    text-align: center;
-}
-div {
-  width: 90rem;
-  padding: 5% 3%;
-}
+ h1 {
+        font-family: "Montserrat-Black";
+        font-size: 3rem;
+        line-height: 1.5;
+        font-weight: 900;
+        text-align: center;
+    }
+    div {
+      padding: 5% 3%;
+    }
+    
+    .carousel-item {
+    height: 380px;
+    }
+    .container-fluid {
+        padding: 3% 15%;
+    }
 
-.carousel-item {
-height: 350px;
-}
