--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,22 @@
- h1 {
+
+    h1 {
         font-family: "Montserrat-Black";
         font-size: 4rem;
         line-height: 1.5;
         font-weight: 900;
         text-align: center;
+        color: #fff;
     }
     div {
-      padding: 5% 3%;
+      padding: 5% 3% 2%;
     }
     
     .carousel-item {
     height: 580px;
+    padding: 7% 15%;
     }
     .container-fluid {
         padding: 3% 15%;
+        background-color: #0081C9;
     }
 
