--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,6 @@
     .container-fluid {
         padding: 3% 15%;
         background-color: #0081C9;
-        height: auto;
+        height: 100%;
     }
 
